--- a/ansible/inventory/hosts.yml
+++ b/ansible/inventory/hosts.yml
@@ -1,39 +1,34 @@
 all:
   vars:
     ansible_ssh_user: ubuntu
+    ansible_ssh_private_key_file: ~/.ssh/devops-key.pem
     ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
-
   children:
     webservers:
       hosts:
         webserver:
-          ansible_host: "18.209.5.250"
+          ansible_host: "54.146.226.124"
           private_ip: "172.31.16.182"
-
     elasticsearch_nodes:
       hosts:
         elasticsearch:
-          ansible_host: "54.175.234.9"
+          ansible_host: "34.227.56.20"
           private_ip: "172.31.22.93"
-
     kibana_nodes:
       hosts:
         kibana:
-          ansible_host: "184.73.18.22"
+          ansible_host: "3.89.105.249"
           private_ip: "172.31.26.147"
-
     database_primary:
       hosts:
         mysql_primary:
-          ansible_host: "3.90.161.197"
+          ansible_host: "54.90.146.221"
           private_ip: "172.31.27.236"
-
     database_standby:
       hosts:
         mysql_standby:
-          ansible_host: "34.229.220.47"
+          ansible_host: "54.221.40.232"
           private_ip: "172.31.21.232"
-
     databases:
       children:
         database_primary:
