--- a/ansible/inventory/hosts.yml
+++ b/ansible/inventory/hosts.yml
@@ -1,35 +1,93 @@
-all:
-  vars:
-    ansible_ssh_user: ubuntu
-    ansible_ssh_private_key_file: ~/.ssh/devops-key.pem
-    ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
-  children:
-    webservers:
-      hosts:
-        webserver:
-          ansible_host: "34.207.116.147"
-          private_ip: "172.31.16.182"
-    elasticsearch_nodes:
-      hosts:
-        elasticsearch:
-          ansible_host: "52.90.98.35"
-          private_ip: "172.31.22.93"
-    kibana_nodes:
-      hosts:
-        kibana:
-          ansible_host: "3.95.57.211"
-          private_ip: "172.31.26.147"
-    database_primary:
-      hosts:
-        mysql_primary:
-          ansible_host: "52.91.58.187"
-          private_ip: "172.31.27.236"
-    database_standby:
-      hosts:
-        mysql_standby:
-          ansible_host: "34.224.68.79"
-          private_ip: "172.31.21.232"
-    databases:
-      children:
-        database_primary:
-        database_standby:
+plugin: amazon.aws.aws_ec2
+regions:
+  - us-east-1
+
+# Only get running instances
+filters:
+  instance-state-name: running
+
+# Create groups based on Name tag
+keyed_groups:
+  # Group by instance name tag
+  - key: tags.Name | default('unnamed')
+    prefix: tag_name
+    separator: "_"
+  # Group by instance state
+  - key: instance_state_name
+    prefix: instance_state
+    separator: "_"
+
+# Custom groups for your application
+groups:
+  # Create groups based on Name tag patterns
+  webservers: "'WebServer' in (tags.Name | default(''))"
+  elasticsearch_nodes: "'Elasticsearch' in (tags.Name | default(''))"
+  kibana_nodes: "'Kibana' in (tags.Name | default(''))"
+  database_primary: "'MySQL-Primary' in (tags.Name | default(''))"
+  database_standby: "'MySQL-Standby' in (tags.Name | default(''))"
+  databases: group_names | intersect(['database_primary', 'database_standby']) | length > 0
+
+# How to name the hosts - use actual IP addresses
+hostnames:
+  - network-interface.association.public-ip
+  - private-ip-address
+  - dns-name
+
+# Variables for each host - more explicit configuration
+compose:
+  ansible_host: public_ip_address
+  private_ip: private_ip_address
+  ansible_user: '"ubuntu"'
+  ansible_ssh_private_key_file: '"/home/akshara/.ssh/devops-key.pem"'
+  ansible_ssh_common_args: '"-o StrictHostKeyChecking=no -o IdentitiesOnly=yes -o UserKnownHostsFile=/dev/null"'
+
+# Cache settings to improve performance
+cache: true
+cache_plugin: memory
+cache_timeout: 3600plugin: amazon.aws.aws_ec2
+regions:
+  - us-east-1
+
+# Only get running instances
+filters:
+  instance-state-name: running
+
+# Create groups based on Name tag
+keyed_groups:
+  # Group by instance name tag
+  - key: tags.Name | default('unnamed')
+    prefix: tag_name
+    separator: "_"
+  # Group by instance state
+  - key: instance_state_name
+    prefix: instance_state
+    separator: "_"
+
+# Custom groups for your application
+groups:
+  # Create groups based on Name tag patterns
+  webservers: "'WebServer' in (tags.Name | default(''))"
+  elasticsearch_nodes: "'Elasticsearch' in (tags.Name | default(''))"
+  kibana_nodes: "'Kibana' in (tags.Name | default(''))"
+  database_primary: "'MySQL-Primary' in (tags.Name | default(''))"
+  database_standby: "'MySQL-Standby' in (tags.Name | default(''))"
+  databases: group_names | intersect(['database_primary', 'database_standby']) | length > 0
+
+# How to name the hosts - use actual IP addresses
+hostnames:
+  - network-interface.association.public-ip
+  - private-ip-address
+  - dns-name
+
+# Variables for each host - more explicit configuration
+compose:
+  ansible_host: public_ip_address
+  private_ip: private_ip_address
+  ansible_user: '"ubuntu"'
+  ansible_ssh_private_key_file: '"/home/akshara/.ssh/devops-key.pem"'
+  ansible_ssh_common_args: '"-o StrictHostKeyChecking=no -o IdentitiesOnly=yes -o UserKnownHostsFile=/dev/null"'
+
+# Cache settings to improve performance
+cache: true
+cache_plugin: memory
+cache_timeout: 3600
